# HermitCore-Applicaion

./: README.md
Serverlight/: CMakeLists.txt  README.md  build.sh  run.sh
Serverlight/src/: Makefile  handler.c  httptime.c  server.c
Serverlight/src/headers/: handler.h  httptime.h
